remove unused code and println code